# tp2-algo3

./: .gitignore  LICENSE  README.md
exp/segmentation/cuantitativa/coins/: array.txt  tree.txt  tree_pc.txt
exp/segmentation/cuantitativa/dragon/: array.txt  tree.txt  tree_pc.txt
exp/segmentation/cuantitativa/f14/: array.txt  tree.txt  tree_pc.txt
exp/segmentation/cuantitativa/hands/: array.txt  tree.txt  tree_pc.txt
exp/segmentation/cuantitativa/screws/: array.txt  tree.txt  tree_pc.txt
exp/segmentation/dragon/: dragon_tree.txt  dragon_tree_pc.txt
src/: CMakeLists.txt  llenaloDeSuper.cpp  segmentationIsMyFault.cpp
src/digraph/: digraph.h
src/min_path/bellman_ford/: bellmanFord.cpp  bellmanFord.h
src/min_path/dijkstra/: Dijkstra.cpp  Dijkstra.h
src/min_path/dijskstra_pq/: DijkstraPQ.cpp  DijkstraPQ.h
src/min_path/floyd_warshall/: floydWarshall.cpp  floydWarshall.h
src/segmentation/algorithms/: algorithms.cpp  algorithms.h
src/segmentation/cli/: cli.cpp  cli.h
src/segmentation/disjoint_set/: disjoint_set_tree.cpp  disjoint_set_tree_pc.hpp
src/segmentation/io/: io.cpp  io.h
src/tests/: conjunto-tests.cpp  experimentacion2.cpp
tp2algo3/: CMakeLists.txt  disjoint_set_array.cpp  disjoint_set_tree.hpp  llenaloDeSuper.cpp  main.cpp
tp2algo3/agm/: kruskal.cpp  kruskal.h
tp2algo3/algoritmosP2/: Dijkstra.cpp  Dijkstra.h  DijkstraPQ.cpp  DijkstraPQ.h  bellmanFord.cpp  bellmanFord.h  floydWarshall.cpp  floydWarshall.h
tp2algo3/digraph/: digraph.cpp  digraph.h
tp2algo3/disjoint_set/: disjoint_set_array.cpp  disjoint_set_array.hpp  disjoint_set_tree.cpp  disjoint_set_tree.hpp  disjoint_set_tree_pc.cpp  disjoint_set_tree_pc.hpp
tp2algo3/graph/: graph.cpp  graph.h
tp2algo3/segmentation/: in_out_functions.cpp  in_out_functions.h  segmentation.cpp  segmentation.h
tp2algo3/tests/: conjunto-tests.cpp  experimentacion2.cpp
